crates/plotnik-lib/tests/05-typegen/quantifiers/error_ref_enum_repeat_needs_row.txt
Item = [A: (identifier) @id]
Bad = (program (Item)+)
==== diagnostics ====
error: each `+` repeat produces a value, but the values aren't collected into a list
 --> query.ptk:2:16
  |
2 | Bad = (program (Item)+)
  |                ^^^^^^^
  |
help: add a row capture so each repeat becomes one element: `(...)+ @items`
